--- a/backend/ontario_audio_tour/AdminControl/templates/registration/logged_out.html
+++ b/backend/ontario_audio_tour/AdminControl/templates/registration/logged_out.html
@@ -1,2 +1,2 @@
 <h2>You are logged out</h2><br>
-<h3>Back to login page <a href="{% url 'AdminControl:login' %}">here</a></h3>
+<h3>Back to login page <a href="{% url 'Accounts:login' %}">here</a></h3>
