--- a/backend/ontario_audio_tour/AdminControl/templates/registration/password_change_done.html
+++ b/backend/ontario_audio_tour/AdminControl/templates/registration/password_change_done.html
@@ -4,7 +4,7 @@
     {% block content %}
     <div class='header'>
     <h2>Password changed successfully!</h2>
-    <a href="{% url 'AdminControl:profile' %}">Back to profile</a>
+    <a href="{% url 'Accounts:profile' %}">Back to profile</a>
     </div>
     {% endblock %}
 </html>
