--- a/backend/ontario_audio_tour/AdminControl/templates/registration/password_change_form.html
+++ b/backend/ontario_audio_tour/AdminControl/templates/registration/password_change_form.html
@@ -11,7 +11,7 @@
         <input type="submit" value="Change">
     </form>
 
-    <a href="{% url 'AdminControl:profile' %}">Back to profile</a>
+    <a href="{% url 'Accounts:profile' %}">Back to profile</a>
     </div>
     {% endblock %}
 </html>
