--- a/backend/ontario_audio_tour/AdminControl/templates/users/register.html
+++ b/backend/ontario_audio_tour/AdminControl/templates/users/register.html
@@ -8,5 +8,5 @@
         <input type="submit" value="Register">
     </form>
     <br>
-    <a href="{% url 'AdminControl:login' %}">Back to login</a>
+    <a href="{% url 'Accounts:login' %}">Back to login</a>
 </html>
