--- a/backend/ontario_audio_tour/AdminControl/templates/registration/login.html
+++ b/backend/ontario_audio_tour/AdminControl/templates/registration/login.html
@@ -6,5 +6,5 @@
     {{ form.as_p }}
     <input type="submit" value="Login">
 </form>
-<a href="{% url 'AdminControl:register' %}">Register</a>
+<a href="{% url 'Accounts:register' %}">Register</a>
 {% endblock %}
