--- a/frontend/d3/frontend/src/App.css
+++ b/frontend/d3/frontend/src/App.css
@@ -52,7 +52,7 @@
     background-color: #f9f9f9;
 }
 main{
-    background-image: url("Ontario-Parks-Title.jpg");
+    background-image: url("https://images.pexels.com/photos/147411/italy-mountains-dawn-daybreak-147411.jpeg?cs=srgb&dl=pexels-pixabay-147411.jpg&fm=jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
@@ -114,4 +114,12 @@ main{
     margin-bottom: 20px;
     margin-top: 20px;
 }
+}
+
+body{
+  background-image: url("https://images.pexels.com/photos/147411/italy-mountains-dawn-daybreak-147411.jpeg?cs=srgb&dl=pexels-pixabay-147411.jpg&fm=jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  height: 100%;
 }
