force to margine

--- a/frontend/d3/frontend/src/App.css
+++ b/frontend/d3/frontend/src/App.css
@@ -37,6 +37,11 @@
     transform: rotate(360deg);
   }
 }
+.btn {
+  margin-bottom: 20px;
+  margin-top: 20px;
+  margin-left: 20px;
+}
 
 .bg-grey {
     background-color: #767373;
