--- a/frontend/d3/frontend/src/App.css
+++ b/frontend/d3/frontend/src/App.css
@@ -112,6 +112,13 @@ main{
   border-top-right-radius: 10px;
 }
 
+.list-container {
+  background-color: rgba(255, 255, 255, 0.5);
+  margin-left: 5cm;
+  margin-right: 5cm;
+  padding: 1cm;
+}
+
 @media screen and (max-width: 768px) {
 .card {
     margin-bottom: 50px;
