--- a/frontend/d3/frontend/src/App.css
+++ b/frontend/d3/frontend/src/App.css
@@ -37,6 +37,11 @@
     transform: rotate(360deg);
   }
 }
+.btn {
+  margin-bottom: 20px;
+  margin-top: 20px;
+  margin-left: 20px;
+}
 
 .bg-grey {
     background-color: #767373;
@@ -52,7 +57,7 @@
     background-color: #f9f9f9;
 }
 main{
-    background-image: url("Ontario-Parks-Title.jpg");
+    background-image: url("https://images.pexels.com/photos/147411/italy-mountains-dawn-daybreak-147411.jpeg?cs=srgb&dl=pexels-pixabay-147411.jpg&fm=jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
@@ -84,6 +89,7 @@ main{
     bottom: 0;
     width: 100%;
     height:50px;
+    z-index: 9999;
 }
 #mobile-box {
   width: 360px;
@@ -114,4 +120,12 @@ main{
     margin-bottom: 20px;
     margin-top: 20px;
 }
+}
+
+body{
+  background-image: url("https://images.pexels.com/photos/147411/italy-mountains-dawn-daybreak-147411.jpeg?cs=srgb&dl=pexels-pixabay-147411.jpg&fm=jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  height: 100%;
 }
