--- a/frontend/d3/frontend/src/App.css
+++ b/frontend/d3/frontend/src/App.css
@@ -1,4 +1,4 @@
-/* This is the css file for the website*/
+/* This is the css file for the website which focus on decoration*/
 .App {
   text-align: center;
 }
